added some standby blog pages, began implementing variables into html

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,5 +18,11 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		color:#a73333;
+	}
+
+	::selection {
+		background: #371616;
+		color: white;
 	}
 </style>
