added more styling, refactoring, and hamburger menu

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,13 +1,13 @@
 ---
+import '../styles/global.css';
 import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = 'My Projects';
 ---
 
 <Layout>
-	<a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/projects/">Projects</a>
-    <a href="/contact/">Contact</a>
+    <Header />
 
     <body>
         <h1>{pageTitle}</h1>
@@ -19,5 +19,12 @@ const pageTitle = 'My Projects';
             <li><a href="/posts/post-2/">Post 2</a></li>
             <li><a href="/posts/post-3/">Post 3</a></li>
         </ul>
+        
+        <Footer />
+
+        <script>
+            import "../scripts/menu.js";
+        </script>
+
     </body>
 </Layout>
