--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,12 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
+		<link rel="stylesheet" href="/styles/global.css" />
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Cutive+Mono&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+
 	</head>
 	<body>
 		<slot />
@@ -15,14 +21,9 @@
 <style>
 	html,
 	body {
-		margin: 0;
+		margin: 0px;
 		width: 100%;
 		height: 100%;
-		color:#a73333;
-	}
 
-	::selection {
-		background: #371616;
-		color: white;
 	}
 </style>
