--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,16 +7,11 @@ const pageTitle = 'Contact';
 ---
 
 <Layout>
-    <Header />
-
     <body>
-        <h1>{pageTitle}</h1>
-        <p>If you would like to get in touch, please email me at: <a href="mailto: ruby.mykkanen@gmail.com">ruby.mykkanen@gmail.com</a></p>
-        <p>Or follow me on <a href="link to my insta">Instagram</a> to keep updated!</p>
-
-        <Footer/ >
-        <script>
-            import "../scripts/menu.js";
-        </script>
+        <div class="main-content">
+            <h1>{pageTitle}</h1>
+            <p>If you would like to get in touch, please email me at: <a href="mailto: ruby.mykkanen@gmail.com" class = "link">ruby.mykkanen@gmail.com</a></p>
+            <p>Or follow me on <a href="link to my insta" class = "link">Instagram</a> to keep updated!</p>
+        </div>
     </body>
 </Layout>  
