--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,8 +10,8 @@ import Social from './Social.astro';
   }
 </style>
 
-<footer>
-  <Social platform="twitter" username="astrodotbuild" />
-  <Social platform="github" username="withastro" />
-  <Social platform="youtube" username="astrodotbuild" />
+<footer class = "footer">
+  <Social platform="instagram" username="ruby.kmykk"/>
+  <Social platform="github" username="withastro"/>
+  <Social platform="youtube" username="astrodotbuild"/>
 </footer>
