--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,35 +1,9 @@
 ---
-import '../styles/global.css';
 import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-
-const pageTitle = 'Home Page';
+const pageTitle = "Home Page";
 ---
-
-<Layout>
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <Header />
-    <h1>{pageTitle}</h1>
-
-    <Footer />
-
-	<script>
-		import "../scripts/menu.js";
-  	</script>
-
-
-  </body>
-</html>
-
-
+<Layout pageTitle = {pageTitle}>
+	<div class="main-content">
+  		<h2>My awesome blog subtitle</h2>
+	</div>
 </Layout>
