--- a/src/pages/newsletter.astro
+++ b/src/pages/newsletter.astro
@@ -7,24 +7,19 @@ const pageTitle = 'Monthly Newsletter';
 ---
 
 <Layout>
-    <Header />
-
+    
     <body>
-        <h1>{pageTitle}</h1>
-        <p>Subscribe to our monthly newsletter to stay updated with the latest news and articles!</p>
-        <form action="/subscribe" method="POST">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <button type="submit">Subscribe</button>
-        </form>
-
-
-        <Footer />        
-        <script>
-            import "../scripts/menu.js";
-        </script>
-
-
+        <div class="main-content">
+            <h1>{pageTitle}</h1>
+            <p>Here's where I post a monthly in-depth update on what I've been up to!</p>
+            <p></p>
+            <p>If you'd like to recieve an email when this newsletter is updated, please enter your email here:</p>
+            <form action="/subscribe" method="POST">
+                <label for="email" class = "emailLabel">Email: </label>
+                <input type="email" class = "emailBox" id="email" name="email" required>
+                <button type="submit" class = "submitButton">Subscribe</button>
+            </form>
+        </div>
 
     </body>
 
