--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,30 +1,22 @@
 ---
 import '../styles/global.css';
 import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 const pageTitle = 'My Projects';
 ---
 
 <Layout>
-    <Header />
-
     <body>
-        <h1>{pageTitle}</h1>
-        <h2>Artistic</h2>
-        <h2>Technical</h2>
-        <h2>Other</h2>
-        <ul>
-            <li><a href="/posts/post-1/">Post 1</a></li>
-            <li><a href="/posts/post-2/">Post 2</a></li>
-            <li><a href="/posts/post-3/">Post 3</a></li>
-        </ul>
-        
-        <Footer />
-
-        <script>
-            import "../scripts/menu.js";
-        </script>
+        <div class="main-content">
+            <h1>{pageTitle}</h1>
+            <h2>Artistic</h2>
+            <h2>Technical</h2>
+            <h2>Other</h2>
+            <ul>
+                {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+            </ul>
+        </div>
 
     </body>
 </Layout>
