finished astro tutorial, will commit more regularly now

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import Navigation from "./Navigation.astro";
 import Hamburger from "./Hamburger.astro";
+import ThemeIcon from "./ThemeIcon.astro";
 ---
 
 <header>
@@ -8,6 +9,7 @@ import Hamburger from "./Hamburger.astro";
     <nav>
         <Hamburger />
         <Navigation>
+        <ThemeIcon />
     </nav>
 </header>
 
