--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,4 +6,5 @@
         <a href="/projects/" >Projects</a>
         <a href="/contact/" >Contact</a>
         <a href="/newsletter/" >Newsletter</a>
+        <a href="/tags/" >Tags</a>
     </div>
