--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,22 +1,23 @@
 ---
-import '../styles/global.css';
+import { getCollection } from "astro:content";
 import Layout from '../layouts/Layout.astro';
 import BlogPost from '../components/BlogPost.astro';
-const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+
 const pageTitle = 'My Projects';
+const allPosts = await getCollection("newsletter");
 ---
 
 <Layout>
-    <body>
-        <div class="main-content">
-            <h1>{pageTitle}</h1>
-            <h2>Artistic</h2>
-            <h2>Technical</h2>
-            <h2>Other</h2>
-            <ul>
-                {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
-            </ul>
-        </div>
-
-    </body>
+    <div class="main-content">
+        <h1>{pageTitle}</h1>
+        <h2>Artistic</h2>
+        <h2>Technical</h2>
+        <h2>Other</h2>
+        <ul>
+            {allPosts.map(
+                (post) => <BlogPost url={`/posts/${post.id}/`} title={post.data.title} />
+                )
+                }
+         </ul>
+    </div>
 </Layout>
