--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,11 +1,8 @@
 ---
-const { title, url } = Astro.props;
-const postDate = new Date(url.split('/').pop().replace('.md', '')).toLocaleDateString('en-US', {
-    year: 'numeric',
-    month: 'long',
-    day: 'numeric'
-});
+const { frontmatter } = Astro.props;
+const url = `/posts/${frontmatter.slug}`;
 ---
-<li><a href={url}>{title}</a></li>
-<p> Published: {Date}</p>
+<li><a href={url}>{frontmatter.title}</a></li>
+<p> Published: {frontmatter.pubDate}</p>
+<img src={frontmatter.image.url} alt={frontmatter.image.alt} class='Project_image'/>
 
