--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,14 +2,18 @@
 import Navigation from "./Navigation.astro";
 import Hamburger from "./Hamburger.astro";
 import ThemeIcon from "./ThemeIcon.astro";
+import BlogLogoTitle from "./BlogLogoTitle.astro";
 ---
 
-<header>
-    
+<header class="header">
+        <BlogLogoTitle />           
+        <Hamburger />     
     <nav>
-        <Hamburger />
+  
         <Navigation>
         <ThemeIcon />
+
     </nav>
+ 
 </header>
 
