--- a/src/content/projects/[slug].astro
+++ b/src/content/projects/[slug].astro
@@ -3,9 +3,9 @@ import { getCollection, render } from 'astro:content';
 import MarkdownPostLayout from '../../layouts/MarkdownPostLayout.astro';
 
 export async function getStaticPaths() {
-  const posts = await getCollection('newsletter');
+  const posts = await getCollection('projects');
   return posts.map(post => ({
-    params: { slug: post.id }, props: { post },
+    params: { slug: post.slug }, props: { post },
   }));
 }
 
