--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,10 +3,11 @@ import Layout from '../layouts/Layout.astro';
 const { frontmatter } = Astro.props;
 ---
 <Layout pageTitle={frontmatter.title}>
-    <p>By {frontmatter.author}</p>
-    <p>{frontmatter.pubDate.toLocaleDatetring()}</p>
-    <p>{frontmatter.description}</p>
-    <img src={frontmatter.image.src} alt={frontmatter.image.alt} />
+    <p>Collaborators: {frontmatter.author}, {frontmatter.collaborators}</p>
+    <p>Published on {frontmatter.pubDate.toLocaleDateString()}</p>
+    <p>Project Completed on {frontmatter.completionDate}</p>
+    <p>{frontmatter.abstract}</p>
+    <img src={frontmatter.image.url} alt={frontmatter.image.alt} class='Project_image'/>
     <p>Tags: {frontmatter.tags.join(', ')}</p>
     <article>
         <slot />
