--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,15 +4,12 @@ import Layout from '../layouts/Layout.astro';
 import BlogPost from '../components/BlogPost.astro';
 
 const pageTitle = 'My Projects';
-const allPosts = await getCollection("newsletter");
+const allPosts = await getCollection("project");
 ---
 
 <Layout>
     <div class="main-content">
         <h1>{pageTitle}</h1>
-        <h2>Artistic</h2>
-        <h2>Technical</h2>
-        <h2>Other</h2>
         <ul>
             {allPosts.map(
                 (post) => <BlogPost url={`/posts/${post.id}/`} title={post.data.title} />
