--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import Layout from '../../layouts/Layout.astro';
-const allPosts = await getCollection("newsletter");
+const allPosts = await getCollection("projects");
 const tags = [...new Set(allPosts.map((post: any) => post.data.tags).flat())];
 const pageTitle = 'Tags';
 ---
