--- a/src/projects/[slug].astro
+++ b/src/projects/[slug].astro
@@ -1,11 +1,12 @@
 ---
 import { getCollection, render } from 'astro:content';
-import MarkdownPostLayout from '../../layouts/MarkdownPostLayout.astro';
+import MarkdownPostLayout from '../layouts/MarkdownPostLayout.astro';
 
 export async function getStaticPaths() {
   const posts = await getCollection('projects');
   return posts.map(post => ({
-    params: { slug: post.slug }, props: { post },
+    params: { slug: post.id }, 
+    props: { post },
   }));
 }
 
