--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,6 +4,9 @@ import Social from './Social.astro';
 
 <footer class = "footer">
   <Social platform="instagram" username="ruby.kmykk"/>
-  <Social platform="github" username="withastro"/>
-  <Social platform="youtube" username="astrodotbuild"/>
+  <Social platform="github" username="SnArk221"/>
+  <Social platform="linkedin" username="Ruby Mykkanen"/>
+  <Social platform="Discord" username="Ruen01"/>
+  <Social platform="Whatsapp" username="Ruby Mykkanen"/>
+
 </footer>
