--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,12 +13,13 @@ const pageTitle = 'About Me';
         <img src="../assets/RubyPhoto.png" alt="Ruby Mykkanen" class="profile-image"/>
         <div class = "main-content">
             <h1>{pageTitle}</h1>
-            <p>Hi, I'm Ruby Mykkanen, a future engineer! I'm inspired by learning more about the world I live in, and making creations of my own.</p>
-            <h2>Where I am right now:</h2>
-            <li>I am a freshman at the Massachusetts Institute of Technology</li>
-            <li>I am studying Mechanical Engineering and or Bioengineering</li>
-            <li>I am looking for opportunities to learn more about these fields via real-world experience [see resume for current skillset]</li>
-
+            <p>As as student at MIT, my current goal is to learn as much as possible, and gain as much experience as I can. In the long term I hope to have experiences, connections and skills I necessary to build technology that can have a tangible and positive impact on society and human health.</p>
+            <h2>Academic Interests</h2>
+            <ol>
+                <li><h3>Bioprinting</h3>I’m currently interested in synthetic biology, tissue engineering and bioprinting, particularly the technologies that facilitate this. I think the future of organ transplants is going to be synthetic printed organs, and I can’t wait to help be a part of this process. </li>
+                <li><h3>Prosthetics</h3>Another Interest of mine is human prosthetics. I wonder how the areas of bio-printing and tissue engineering can be applied in this area. I see a future where synthetic human tissues can be incorporated into prosthetics to increase their realism, sensitivity and effectiveness.</li>
+                <li><h3>Botany</h3>Finally I have always had a passion for botany, and in recent days I have become enthralled by the process of genetically modifying plants. Though I don’t see any direct human applications from this I’m excited by the do-ability and wonder of genetics. I envision plants that could be more resilient, smell nicer or be more beautiful. Truly anything is possible!</li>
+            </ol>
             
 
         </div>
@@ -26,16 +27,5 @@ const pageTitle = 'About Me';
 </Layout>
 
 <style>
-    li {
-        color: #FB8B24;
-        font-weight: bold;
-    }
-    p {
-        color: #708D81;
-        font-size: 1.2em;
-    }
-    h2 {
-        color: #0F4C5C;
-        font-weight: bold;
-    }
+
 </style>
