--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ const pageTitle = 'About Me';
 
     <body>
         
-        <img src="../assets/RubyPhoto.png" alt="Ruby Mykkanen" class="profile-image"/>
+        <img src='../assets/Profile.jpg' alt="Ruby Mykkanen" class="profile-image"/>
         <div class = "main-content">
             <h1>{pageTitle}</h1>
             <p>As as student at MIT, my current goal is to learn as much as possible, and gain as much experience as I can. In the long term I hope to have experiences, connections and skills I necessary to build technology that can have a tangible and positive impact on society and human health.</p>
