Aesthetic layout edits

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,8 +4,8 @@ import Social from './Social.astro';
 
 <footer class = "footer">
   <Social platform="instagram" username="ruby.kmykk"/>
-  <Social platform="github" username="SnArk221"/>
-  <Social platform="linkedin" username="Ruby Mykkanen"/>
+  <Social platform="github" username="SnArk22"/>
+  <Social platform="linkedin" username="in/ruby-mykkanen-a4b18035b/"/>
   <Social platform="Discord" username="Ruen01"/>
   <Social platform="Whatsapp" username="Ruby Mykkanen"/>
 
