--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,8 +6,11 @@ import BlogLogoTitle from "./BlogLogoTitle.astro";
 ---
 
 <header class="header">
+    <p class="logo-block">
         <BlogLogoTitle />           
-        <Hamburger />     
+        <Hamburger />    
+    </p>
+
     <nav>
   
         <Navigation>
