--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import Layout from '../layouts/Layout.astro';
+import ProfileImage from '../assets/profile_3.jpg';
 
 const pageTitle = 'About Me';
 
@@ -9,18 +10,37 @@ const pageTitle = 'About Me';
 <Layout>
 
     <body>
-        
-        <img src='../assets/Profile.jpg' alt="Ruby Mykkanen" class="profile-image"/>
+        <div class="about-block">
+            <div><img src={ProfileImage.src} alt="Ruby Mykkanen" class="profile-image"/></div>
+            <div>
+                <h1>{pageTitle}</h1>
+                <p>As as student at MIT, my current goal is to learn as much as possible, and gain as much experience as I can. In the long term I hope to have experiences, connections and skills I necessary to build technology that can have a tangible and positive impact on society and human health.</p>
+            </div>
+
+        </div>
         <div class = "main-content">
-            <h1>{pageTitle}</h1>
-            <p>As as student at MIT, my current goal is to learn as much as possible, and gain as much experience as I can. In the long term I hope to have experiences, connections and skills I necessary to build technology that can have a tangible and positive impact on society and human health.</p>
+
             <h2>Academic Interests</h2>
             <ol>
                 <li><h3>Bioprinting</h3>I’m currently interested in synthetic biology, tissue engineering and bioprinting, particularly the technologies that facilitate this. I think the future of organ transplants is going to be synthetic printed organs, and I can’t wait to help be a part of this process. </li>
                 <li><h3>Prosthetics</h3>Another Interest of mine is human prosthetics. I wonder how the areas of bio-printing and tissue engineering can be applied in this area. I see a future where synthetic human tissues can be incorporated into prosthetics to increase their realism, sensitivity and effectiveness.</li>
                 <li><h3>Botany</h3>Finally I have always had a passion for botany, and in recent days I have become enthralled by the process of genetically modifying plants. Though I don’t see any direct human applications from this I’m excited by the do-ability and wonder of genetics. I envision plants that could be more resilient, smell nicer or be more beautiful. Truly anything is possible!</li>
             </ol>
-            
+
+            <h2>Skills</h2>
+            <h3>Digital</h3>
+            <ul>
+                <li><b>Coding:</b> HTML, CSS, Astro, Google Sheets, Intermediate Python</li>
+                <li><b>Cad and 3-D design:</b> FreeCad, 3-D filament Printing Slicing Software, Blender</li>
+                <li><b>Graphic design:</b> Autodesk Sketchbook, Pixelmator Pro, Adobe Photoshop, Canva, Google Slides</li>
+            </ul>
+            <h3>Physical</h3>
+            <ul>
+                <li><b>Power tools:</b> Drill, Table Saw, Miter Saw,  Belt Sander, Dremel, Soldering Iron, Angle Grinder, Sewing Machine, Laser Cutter</li>
+                <li><b>Artistic:</b> Mural Painting, Acrylic Painting, Watercolor, Portrait Sketching, Digital Drawing, linocut Print Carving, Oragami</li>
+                <li><b>Music:</b> Bb Clarinet (8 years experience), Eb Clarinet, Bass Clarinet, Trombone, Bassoon, Arranging for Band and Acapella, Singing, Beginner: Piano, Guitar, Trumpet, Oboe</li>
+                <li><b>Other:</b> 3-D printing, Insect Pinning and Catching, Growing Tropical Plants, Bonsai Training</li>
+            </ul>
 
         </div>
     </body>
