--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,17 +1,16 @@
 ---
 import { getCollection } from "astro:content";
 import Layout from '../../layouts/Layout.astro';
-import BlogPost from '../../components/BlogPost.astro';
+import BlogPost from '../../components/ProjectPost.astro';
 
 export async function getStaticPaths() {
-  const allPosts = await getCollection("newsletter");
-  const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
-
+  const allProjects = await getCollection('projects');
+  const uniqueTags = [...new Set(allProjects.flatMap(p => p.data.tags || []))];
   return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) =>
-      post.data.tags.includes(tag)
+    const filteredPosts = allProjects.filter((post) =>
+      post.data.tags?.includes(tag)
     );
-    return {
+    return { 
       params: { tag },
       props: { posts: filteredPosts },
     };
