lotta changes. doing this before deleting an important file so that I can revert if needbe

--- a/src/components/ProjectPost.astro
+++ b/src/components/ProjectPost.astro
@@ -1,6 +1,6 @@
 ---
 const { frontmatter } = Astro.props;
-const url = `../pages/projects/${frontmatter.slug}`;
+const url = `../projects/${frontmatter.slug}`;
 ---
 <li class="project-preview">
     <a href={url}>
