--- a/src/projects/[slug].astro
+++ b/src/projects/[slug].astro
@@ -5,7 +5,7 @@ import MarkdownPostLayout from '../layouts/MarkdownPostLayout.astro';
 export async function getStaticPaths() {
   const posts = await getCollection('projects');
   return posts.map(post => ({
-    params: { slug: post.id }, 
+    params: { slug: post.data.slug }, 
     props: { post },
   }));
 }
@@ -13,6 +13,6 @@ export async function getStaticPaths() {
 const { post } = Astro.props;
 const { Content } = await render(post);
 ---
-<MarkdownPostLayout frontmatter={post.data}>
+<MarkdownPostLayout frontmatter={{ ...post.data, slug: post.id }}>
   <Content />
 </MarkdownPostLayout>
